--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "formidable": "^2.0.1",
     "helmet": "^6.0.0",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
