custom upload file and config eslint

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ DB_DIALECT=postgres
 JWT_SECRET=secrete_key
 PG_ADMIN_EMAIL=admin@admin.com
 PG_ADMIN_PASSWORD=admin
+APP_DOMAIN=http://localhost:4000
+DEFAULT_AVATAR=/images/avatars/default-avatar.png
