--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.5.1",
     "sequelize": "^6.24.0"
   },
   "devDependencies": {
